# Email-Agent

./: README.md  categorizer.py  composer.py  drafter.py  email_builder.py  fetcher.py  main.py  processor.py  pyproject.toml  replier.py  token.json
api/: calendar.py  chat.py
calendar_modules/: __init__.py  calendar_events.py  create_events.py
email_agents/: __init__.py  email_agent.py  email_agents.py  instructions.py
email_modules/: categorizer.py  composer.py  drafter.py  email_builder.py  fetcher.py  processor.py  replier.py
models/: __init__.py  attendee.py  interfaces.py
routers/: emails.py
services/: auth.py
tools/: categorize.py  compose_pipeline.py  draft_pipeline.py  draft_reply.py  fetch_unread.py  process_pipeline.py  reply_generator.py  send_reply.py  summarize.py
utils/: gemini_model.py  message_collector.py  redis_collector.py
